--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "keywords": [
     "scaffolding",
-    "generator"
+    "generator",
+    "react"
   ],
   "author": "John Klimov",
   "license": "MIT",
@@ -32,7 +33,7 @@
   },
   "dependencies": {
     "brief-async": "^0.4.0",
-    "fs-handy-wraps": "^2.1.0",
+    "fs-handy-wraps": "^3.0.0",
     "opn": "^5.3.0"
   }
 }
